--- a/SmoothieShop/Base.lproj/Main.storyboard
+++ b/SmoothieShop/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="f2m-po-4Fc">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="f2m-po-4Fc">
                                 <rect key="frame" x="20" y="308" width="560" height="272"/>
                                 <color key="backgroundColor" red="0.18039215689999999" green="0.69411764710000001" blue="0.20784313730000001" alpha="0.29999999999999999" colorSpace="calibratedRGB"/>
                                 <constraints>
@@ -41,17 +41,20 @@
                                         <constraints>
                                             <constraint firstAttribute="height" constant="36" id="2UL-uQ-ptQ"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" name="CourierNewPSMT" family="Courier New" pointSize="18"/>
+                                        <fontDescription key="fontDescription" name="CourierNewPS-BoldMT" family="Courier New" pointSize="18"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w1x-lS-5y2">
-                                        <rect key="frame" x="186" y="107" width="189" height="57"/>
+                                        <rect key="frame" x="179.5" y="107" width="202" height="57"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="57" id="bKp-tp-nrG"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="48"/>
-                                        <state key="normal" title="Buy Now"/>
+                                        <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="48"/>
+                                        <state key="normal" title="Pay Now"/>
+                                        <connections>
+                                            <action selector="buyButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kAP-2y-wDQ"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="0.29999999999999999" colorSpace="calibratedRGB"/>
